manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cloud-sample
    #name: cloudsample
spec:
    ports:
    - port: 8080 
    selector:
        app: cloud-sample
        #app: cloudsample
