manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-sample-ingress
  #name: cloudsample-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  #- host: cloud-sample.cepg-aa.kubepia.net
  - host: cloudsample-82268862.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: cloud-sample
            #name: cloudsample
            port:
              number: 8080
        pathType: Prefix
